@@ -1,3 +1,12 @@
+Wed Jan 18 01:07:56 1995  Mark Eichin  <eichin@cygnus.com>
+
+	* configure.in: undo streams test. It turns out that we want sunos
+	to *fail* that test, since it doesn't have a streams PTEM module
+	anyhow.
+	* krlogind.c: don't include sys/tty.h and sys/ptyvar.h if we don't
+	HAVE_STREAMS already.
+	* krlogin.c: do the same thing.
+
 Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
 
     * Added krb5_context to all krb5_routines
